# Toaster

./: CMakeLists.txt
RtMidi/: RtMidi.cpp  RtMidi.h  RtMidi.pro
Setup/Mac/: copyfonts.sh
Shared/: Commons.h  MidiConsumer.h  SysExBase.h  Utils.h
Toaster/: AboutDialog.cpp  AboutDialog.h  AirChorusFrame.cpp  AirChorusFrame.h  Amp.cpp  Amp.h  AmpFrame.cpp  AmpFrame.h  AmpFrame.ui  AmpMidi.cpp  AmpMidi.h  AnalogOctaverFrame.cpp  AnalogOctaverFrame.h  BrowserFrame.cpp  BrowserFrame.h  Cab.cpp  Cab.h  CabFrame.cpp  CabFrame.h  CabMidi.cpp  CabMidi.h  ChromaticPitchFrame.cpp  ChromaticPitchFrame.h  CompressorFrame.cpp  CompressorFrame.h  ConnectionStatusFrame.cpp  ConnectionStatusFrame.h  DebugCreateStringValuesDialog.cpp  DebugCreateStringValuesDialog.h  DebugMidi.cpp  DebugMidi.h  DebugSettingsDialog.cpp  DebugSettingsDialog.h  Delay.cpp  Delay.h  DelayCtxMenu.cpp  DelayCtxMenu.h  DelayFrame.cpp  DelayFrame.h  DelayMidi.cpp  (+174 more)
ToasterWidgets/: CtxMenuProvider.h  QToasterBrowserLCD.cpp  QToasterBrowserLCD.h  QToasterBrowserLCDPlugin.cpp  QToasterBrowserLCDPlugin.h  QToasterLCD.cpp  QToasterLCD.h  QToasterLCD.ui  QToasterLookUpTableDial.cpp  QToasterLookUpTableDial.h  QToasterLookUpTableDialPlugin.cpp  QToasterLookUpTableDialPlugin.h  QToasterStompEditLCD.cpp  QToasterStompEditLCD.h  QToasterStompEditLCD.ui  QToasterStompEditLCDPlugin.cpp  QToasterStompEditLCDPlugin.h  QToasterTunerLCD.cpp  QToasterTunerLCD.h  QToasterTunerLCDPlugin.cpp  QToasterTunerLCDPlugin.h  ToasterWidgetsLib.h  qbigdial.cpp  qbigdial.h  qbigdialplugin.cpp  qbigdialplugin.h  qchickenheaddial.cpp  qchickenheaddial.h  qchickenheaddialplugin.cpp  qchickenheaddialplugin.h  qlcddisplay.cpp  qlcddisplay.h  qlcddisplayplugin.cpp  qlcddisplayplugin.h  qmulticolorled.cpp  qmulticolorled.h  qmulticolorledplugin.cpp  qmulticolorledplugin.h  qsmalldial.cpp  qsmalldial.h  (+20 more)
VirtualKPA/: VirtualBlobParam.cpp  VirtualBlobParam.h  VirtualExtendedParam.cpp  VirtualExtendedParam.h  VirtualKPA.cpp  VirtualKPA.h  VirtualModule.cpp  VirtualModule.h  VirtualMultiParam.cpp  VirtualMultiParam.h  VirtualParam.cpp  VirtualParam.h  VirtualRig.cpp  VirtualRig.h  VirtualSingleParam.cpp  VirtualSingleParam.h  VirtualStringParam.cpp  VirtualStringParam.h  VirtualUnknownParam.cpp  VirtualUnknownParam.h  virtualkpa_global.h
